# sem6-dc-vec

./: CMakeLists.txt  DC_time_measurements.ipynb  README.md
data/: benchmark0.txt  benchmark0_test.txt  benchmark1.txt  counts2.txt  counts3.txt  dict2_crc32.txt  dict2_str.txt  dict3_crc32.txt  dict3_str.txt
src/: CMakeLists.txt  tfidfvectorizer.cpp  tfidfvectorizer.h  tfidfvectorizer_benchmark_test.cpp  tfidfvectorizer_doctest.cpp
